--- a/Implementation of Stack.ipynb
+++ b/Implementation of Stack.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# dynamically implemented compared to original example\n",
+    "class Stack:\n",
+    "    def __init__(self, size):\n",
+    "        self.max_size = size\n",
+    "        self.length = 0\n",
+    "        self.stack = []\n",
+    "\n",
+    "    def push(self, data):\n",
+    "        if self.length == self.max_size:\n",
+    "            return print(\"Stack at max capacity\")\n",
+    "        \n",
+    "        self.stack.append(data)\n",
+    "        self.length += 1\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return print(\"stack is empty\") \n",
+    "        removed = self.stack.pop()\n",
+    "        self.length -= 1\n",
+    "        return (f\"{removed} popped\")\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return print(\"stack is empty\") \n",
+    "        return (f\"{self.stack[-1]} is on top\")\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return self.length\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        if self.length == 0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 is on top\n",
+      "20 popped\n",
+      "1\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack = Stack(5)\n",
+    "stack.push(10)\n",
+    "stack.push(20)\n",
+    "print(stack.peek())  # Should print: \"20 is on top\"\n",
+    "print(stack.pop())   # Should print: \"20 popped\"\n",
+    "print(stack.size())  # Should print: 1\n",
+    "print(stack.is_empty())  # Should print: False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +348,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        \n",
+    "\n",
+    "class LStack:\n",
+    "    def __init__(self, capacity):\n",
+    "        self.top = None\n",
+    "        self.capacity = capacity\n",
+    "        self.size = 0\n",
+    "\n",
+    "    def push(self, data):\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        if self.size >= self.capacity:\n",
+    "            raise Exception(\"Stack already at maximum capacity\")\n",
+    "        \n",
+    "        new_node.next = self.top\n",
+    "        self.top = new_node\n",
+    "        self.size += 1\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        if self.size < 1:\n",
+    "            raise Exception(\"Stack is empty\")\n",
+    "        \n",
+    "        removed = self.top.data\n",
+    "        self.top = self.top.next\n",
+    "        self.size -= 1\n",
+    "        return removed\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if self.size < 1:\n",
+    "            raise Exception(\"Stack is empty\")\n",
+    "        return self.top.data\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        if self.size == 0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def isFull(self):\n",
+    "        return self.size == self.capacity\n",
+    "    \n",
+    "    def print_stack(self):\n",
+    "\n",
+    "        current_node = self.top\n",
+    "\n",
+    "        while current_node is not None:\n",
+    "            print(f\"{current_node.data} \", end= \"-> \")\n",
+    "            current_node = current_node.next\n",
+    "        print(\"None\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7 -> 5 -> 3 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "llstack = LStack(5)\n",
+    "llstack.push(3)\n",
+    "llstack.push(5)\n",
+    "llstack.push(7)\n",
+    "llstack.push(1)\n",
+    "llstack.pop()\n",
+    "print(llstack.peek())\n",
+    "llstack.print_stack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llstack.push(7)\n",
+    "llstack.push(1)\n",
+    "llstack.isFull()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +617,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# linked list stack implementation\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -686,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "datasci_env",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
