Done by Sergej on 18-02-25

--- a/Implementation of Stack.ipynb
+++ b/Implementation of Stack.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,16 @@
       "20\n",
       "10\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -143,10 +153,13 @@
     "\n",
     "# Example usage:\n",
     "array_stack = ArrayStack(5)\n",
+    "array_stack.isEmpty()\n",
     "array_stack.push(10)\n",
     "array_stack.push(20)\n",
     "print(array_stack.pop())  # Output: 20\n",
-    "print(array_stack.peek())  # Output: 10"
+    "print(array_stack.peek())  # Output: 10\n",
+    "array_stack.peek()\n",
+    "array_stack.isEmpty()"
    ]
   },
   {
@@ -159,10 +172,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack is full\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_stack = ArrayStack(4)\n",
+    "for i in range (4):\n",
+    "    my_stack.push(i*10)\n",
+    "my_stack.peek()\n",
+    "my_stack.push(40)\n",
+    "my_stack.peek()\n",
+    "my_stack.pop()\n",
+    "my_stack.peek()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +326,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "30\n",
+      "20\n",
+      "10\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list_stack = LinkedListStack()\n",
+    "for i in range(5):\n",
+    "    my_list_stack.push(i+1)\n",
+    "print(my_list_stack.peek())\n",
+    "\n",
+    "for i in range(3):\n",
+    "    my_list_stack.push((i+1)*10)\n",
+    "\n",
+    "while not(my_list_stack.isEmpty()):\n",
+    "    print(my_list_stack.pop())\n",
+    "\n",
+    "print(my_list_stack.peek())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,10 +444,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68\n",
+      "43\n",
+      "70\n",
+      "Stack is full\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "while not array_stack.isFull():\n",
+    "    array_stack.push(random.randint(1, 100))\n",
+    "    print(array_stack.peek())\n",
+    "array_stack.push(random.randint(1, 100))\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -404,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,15 +510,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "70\n",
+      "43\n",
+      "68\n",
       "20\n",
-      "10\n"
+      "10\n",
+      "Stack is empty\n",
+      "None\n"
      ]
     }
    ],
@@ -436,7 +531,12 @@
     "# Sample Execution\n",
     "\n",
     "print(array_stack.pop())  # Output: 20 popped from stack\n",
-    "print(array_stack.pop())  # Output: 10 popped from stack\n"
+    "print(array_stack.pop())  # Output: 10 popped from stack\n",
+    "print(array_stack.pop())  # Output: 10 popped from stack\n",
+    "print(array_stack.pop())  # Output: 10 popped from stack\n",
+    "print(array_stack.pop())  # Output: 10 popped from stack\n",
+    "print(array_stack.pop())  # Output: 10 popped from stack\n",
+    "\n"
    ]
   },
   {
@@ -478,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,13 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "False\n"
      ]
     }
@@ -571,7 +672,9 @@
    "source": [
     "# Sample Execution\n",
     "\n",
-    "print(array_stack.isEmpty())  # Output: False (since there are elements in the stack)"
+    "print(array_stack.isEmpty())  # Output: False (since there are elements in the stack)\n",
+    "array_stack.push(1)\n",
+    "print(array_stack.isEmpty())"
    ]
   },
   {
@@ -613,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,21 +726,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "False\n",
+      "73\n",
+      "58\n",
+      "100\n",
+      "Stack is full\n",
+      "100\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# Sample Execution\n",
     "\n",
-    "print(array_stack.isFull())  # Output: False (if capacity has not been reached)"
+    "print(array_stack.isFull())  # Output: False (if capacity has not been reached)\n",
+    "for i in range(4):\n",
+    "    array_stack.push(random.randint(1, 100))\n",
+    "    print(array_stack.peek())\n",
+    "print(array_stack.isFull())"
    ]
   },
   {
@@ -682,6 +795,34 @@
     "\n",
     "Happy coding! Enjoy practicing Stack implementations in Python!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -700,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
