--- a/Implementation of Stack.ipynb
+++ b/Implementation of Stack.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class ArrayStack:\n",
+    "    def __init__(self, capacity):\n",
+    "        self.capacity = capacity\n",
+    "        self.stack = [None] * capacity\n",
+    "        self.top = -1\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        if self.isFull():\n",
+    "            print(\"Stack is full\")\n",
+    "            return\n",
+    "\n",
+    "        self.top += 1\n",
+    "        self.stack[self.top] = item\n",
+    "    \n",
+    "    def isFull(self):\n",
+    "        return self.top == self.capacity -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = ArrayStack(10)\n",
+    "arr.push(1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -404,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +448,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack:\n",
+    "    def __init__(self, capacity):\n",
+    "        self.capacity = capacity\n",
+    "        self.stack = [None] * capacity\n",
+    "        self.top = -1\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        if self.isFull():\n",
+    "            print(\"Stack is full\")\n",
+    "            return\n",
+    "\n",
+    "        self.top += 1\n",
+    "        self.stack[self.top] = item\n",
+    "    \n",
+    "    def isFull(self):\n",
+    "        return self.top == self.capacity -1\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        return self.top == -1\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            print(\"Stack is empty\")\n",
+    "            return None\n",
+    "\n",
+    "        item = self.stack[self.top]\n",
+    "        self.top -= 1\n",
+    "        return item\n",
+    "\n",
+    "arr.push(1)\n",
+    "arr.push(2)\n",
+    "arr.push(3)\n",
+    "\n",
+    "print(arr.pop())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -506,6 +584,62 @@
     "\n",
     "array_stack.push(30)  # Output: 30 pushed to stack\n",
     "print(array_stack.peek())  # Output: 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack:\n",
+    "    def __init__(self, capacity):\n",
+    "        self.capacity = capacity\n",
+    "        self.stack = [None] * capacity\n",
+    "        self.top = -1\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        if self.isFull():\n",
+    "            print(\"Stack is full\")\n",
+    "            return\n",
+    "\n",
+    "        self.top += 1\n",
+    "        self.stack[self.top] = item\n",
+    "    \n",
+    "    def isFull(self):\n",
+    "        return self.top == self.capacity -1\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        return self.top == -1\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            print(\"Stack is empty\")\n",
+    "            return None\n",
+    "\n",
+    "        item = self.stack[self.top]\n",
+    "        self.top -= 1\n",
+    "        return item\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "            print(\"Stack is Empty\")\n",
+    "        return self.stack[self.top]\n",
+    "    \n",
+    "\n",
+    "arr.push(1)\n",
+    "arr.push(2)\n",
+    "arr.push(3)\n",
+    "\n",
+    "print(arr.peek())"
    ]
   },
   {
@@ -547,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +706,26 @@
     "# Sample Execution\n",
     "\n",
     "print(array_stack.isEmpty())  # Output: False (since there are elements in the stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isEmpty(self):\n",
+    "    return self.top == -1\n",
+    "\n",
+    "print(arr.isEmpty())\n"
    ]
   },
   {
@@ -613,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -638,6 +792,26 @@
     "# Sample Execution\n",
     "\n",
     "print(array_stack.isFull())  # Output: False (if capacity has not been reached)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isFull(self):\n",
+    "    return self.top == self.capacity -1 \n",
+    "\n",
+    "print(arr.isFull())"
    ]
   },
   {
@@ -700,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
