--- a/Implementation of Stack.ipynb
+++ b/Implementation of Stack.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -159,10 +159,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack is full\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_stack_2 = ArrayStack(4)\n",
+    "array_stack_2.push(-2)\n",
+    "array_stack_2.push(4)\n",
+    "array_stack_2.push(5)\n",
+    "array_stack_2.push(0)\n",
+    "array_stack_2.push(0)\n",
+    "\n",
+    "# print([array_stack_2])  # it does not work to print\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array 1: 10\n",
+      "Array 1: None\n",
+      "0\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Array 1:\", array_stack.pop())  # Output: 20\n",
+    "print(\"Array 1:\", array_stack.peek())  # Output: 10\n",
+    "\n",
+    "print(array_stack_2.pop())  # Output: 0 ?\n",
+    "print(array_stack_2.peek())  # Output: 10\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +327,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "linked_list_stack_2 = LinkedListStack()\n",
+    "linked_list_stack_2.push(100)\n",
+    "linked_list_stack_2.push(200)\n",
+    "linked_list_stack_2.push(300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack 2, Top: 300\n",
+      "Removed Item: 300\n",
+      "Stack 2, New Top: 200\n",
+      "Removed Item 2: 200\n",
+      "Stack 2, New Top 2: 100\n",
+      "Removed Item 3: 100\n",
+      "Stack 2, New Top 3: None\n",
+      "Stack is empty\n",
+      "Removed Item 4: None\n",
+      "Stack 2, New Top 4: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Stack 2, Top:\",linked_list_stack_2.peek())\n",
+    "print(\"Removed Item:\", linked_list_stack_2.pop())\n",
+    "print(\"Stack 2, New Top:\",linked_list_stack_2.peek())\n",
+    "print(\"Removed Item 2:\", linked_list_stack_2.pop())\n",
+    "print(\"Stack 2, New Top 2:\",linked_list_stack_2.peek())\n",
+    "print(\"Removed Item 3:\", linked_list_stack_2.pop())\n",
+    "print(\"Stack 2, New Top 3:\",linked_list_stack_2.peek())\n",
+    "print(\"Removed Item 4:\", linked_list_stack_2.pop())\n",
+    "print(\"Stack 2, New Top 4:\",linked_list_stack_2.peek())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,10 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack is full\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_stack_3 = ArrayStack(3)\n",
+    "array_stack_3.push(10)  # Output: 10 pushed to stack\n",
+    "array_stack_3.push(20)\n",
+    "array_stack_3.push(30)\n",
+    "array_stack_3.push(40)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -404,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -449,10 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "removed Item 1: 30\n",
+      "removed Item 2: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"removed Item 1:\", array_stack_3.pop())  # Output: 20 popped from stack\n",
+    "print(\"removed Item 2:\", array_stack_3.pop())  # Output: 20 popped from stack\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -478,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -520,8 +627,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack Top before: 10\n",
+      "Stack item added: None\n",
+      "Stack Top after: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Stack Top before:\",array_stack_3.peek())\n",
+    "print(\"Stack item added:\",array_stack_3.push(30)) # somehow it does not print the number i just pushed\n",
+    "print(\"Stack Top after:\",array_stack_3.peek())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -547,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -584,10 +705,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array_stack_3.isEmpty())  # Output: False (since there are elements in the stack)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -613,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -650,10 +781,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array_stack_3.isFull())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -686,7 +827,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
