--- a/Implementation of Stack.ipynb
+++ b/Implementation of Stack.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,10 +159,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack content: [1, 2, 3]\n",
+      "Stack size: 3\n",
+      "Stack has been reversed: [3, 2, 1]\n",
+      "Stack content: [3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display(self): #Method to display the stack contents\n",
+    "    if self.isEmpty():\n",
+    "        print(\"Stack is empty\")\n",
+    "    else:\n",
+    "         print(\"Stack content:\",[self.stack[i] for i in range (self.top +1)])\n",
+    "\n",
+    "def reverse(self):  #Method to reverse the stack\n",
+    "    if self.isEmpty():\n",
+    "        print(\"Stack is empty. Cannot reverse.\")\n",
+    "        return\n",
+    "    self.stack[:self.top+1] = self.stack[:self.top+1][::-1] #Reverse only the filled part of the stack\n",
+    "    print(\"Stack has been reversed:\", self.stack[:self.top +1])\n",
+    "\n",
+    "def size(self):\n",
+    "    return self.top +1\n",
+    "\n",
+    "##Linking the new methods ot the LinkedListStack class\n",
+    "ArrayStack.display=display\n",
+    "ArrayStack.reverse=reverse\n",
+    "ArrayStack.size=size\n",
+    "\n",
+    "#Example usage:\n",
+    "array_stack = ArrayStack(5)\n",
+    "array_stack.push(1)\n",
+    "array_stack.push(2)\n",
+    "array_stack.push(3)\n",
+    "\n",
+    "array_stack.display()  \n",
+    "print(\"Stack size:\", array_stack.size())  \n",
+    "array_stack.reverse()  \n",
+    "array_stack.display()  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +328,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack contents: [3, 2, 1]\n",
+      "Popped all elements: [3, 2, 1]\n",
+      "Stack is empty.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display(self):\n",
+    "    if self.isEmpty():\n",
+    "        print(\"Stack is empty.\")\n",
+    "    else:\n",
+    "        current = self.top\n",
+    "        elements = []\n",
+    "        while current:\n",
+    "            elements.append(current.data)\n",
+    "            current = current.next\n",
+    "        print(\"Stack contents:\", elements)\n",
+    "\n",
+    "def popAll(self): #Method to pop all elements fromt the stack\n",
+    "    if self.isEmpty():\n",
+    "        print(\"Stack is already empty.\")\n",
+    "        return \n",
+    "    popped_elements= []\n",
+    "    while not self.isEmpty():\n",
+    "        popped_elements.append(self.pop())\n",
+    "    print(\"Popped all elements:\", popped_elements)\n",
+    "\n",
+    "\n",
+    "#Linking the new methods ot the LinkedListStack class\n",
+    "LinkedListStack.display=display\n",
+    "LinkedListStack.popAll=popAll \n",
+    "\n",
+    "# Example usage:\n",
+    "linked_list_stack = LinkedListStack()\n",
+    "linked_list_stack.push(1)\n",
+    "linked_list_stack.push(2)\n",
+    "linked_list_stack.push(3)\n",
+    "\n",
+    "linked_list_stack.display()  #  Show stack contents\n",
+    "linked_list_stack.popAll()   # Pop all elements from the stack\n",
+    "linked_list_stack.display()  #  Show the empty stack\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,9 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 pushed to stack\n",
+      "20 pushed to stack\n"
+     ]
+    }
+   ],
    "source": [
     "# Sample Execution\n",
     "\n",
@@ -373,10 +470,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 pushed to stack\n",
+      "20 pushed to stack\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack():\n",
+    "     def __init__(self,capacity):\n",
+    "         self.capacity=capacity\n",
+    "         self.stack=[None] *capacity\n",
+    "         self.top=-1\n",
+    "\n",
+    "     def push(self,item):\n",
+    "         if self.isFull():\n",
+    "              print(\"Stack is full\")\n",
+    "              return\n",
+    "         self.top +=1\n",
+    "         self.stack[self.top]= item\n",
+    "         print(f\"{item} pushed to stack\")\n",
+    "     \n",
+    "     def isFull(self):\n",
+    "         return self.top == self.capacity -1\n",
+    "     \n",
+    "     def isEmpty(self):\n",
+    "         return self.top ==-1\n",
+    "     def pop(self):\n",
+    "       if self.isEmpty():\n",
+    "         print(\"Stack is empty\")\n",
+    "         return None\n",
+    "\n",
+    "       item = self.stack[self.top]\n",
+    "       self.top -= 1\n",
+    "       return item\n",
+    "\n",
+    "     \n",
+    "\n",
+    "array_stack = ArrayStack(10)\n",
+    "array_stack.push(10)  # Output: 10 pushed to stack\n",
+    "array_stack.push(20)  # Output: 20 pushed to stack"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -404,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -449,10 +589,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 pushed to stack\n",
+      "20 pushed to stack\n",
+      "20 popped from stack\n",
+      "10 popped from stack\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack():\n",
+    "     def __init__(self, capacity):\n",
+    "         self.capacity = capacity\n",
+    "         self.stack = [None] * capacity\n",
+    "         self.top = -1\n",
+    "\n",
+    "     def push(self, item):\n",
+    "         if self.isFull():\n",
+    "              print(\"Stack is full\")\n",
+    "              return\n",
+    "         self.top += 1\n",
+    "         self.stack[self.top] = item\n",
+    "         print(f\"{item} pushed to stack\")\n",
+    "     \n",
+    "     def isFull(self):\n",
+    "         return self.top == self.capacity - 1\n",
+    "     \n",
+    "     def isEmpty(self):\n",
+    "         return self.top == -1\n",
+    "     \n",
+    "     def pop(self):\n",
+    "         if self.isEmpty():\n",
+    "             print(\"Stack is empty\")\n",
+    "             return None\n",
+    "         item = self.stack[self.top]\n",
+    "         self.top -= 1\n",
+    "         return item\n",
+    "     def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "          return None\n",
+    "        return self.stack[self.top]\n",
+    "\n",
+    "# Example usage:\n",
+    "array_stack = ArrayStack(10)\n",
+    "array_stack.push(10)  # Output: 10 pushed to stack\n",
+    "array_stack.push(20)  # Output: 20 pushed to stack\n",
+    "\n",
+    "popped_item = array_stack.pop()  # Pop the top item\n",
+    "print(f\"{popped_item} popped from stack\")  # Output: 20 popped from stack\n",
+    "\n",
+    "popped_item = array_stack.pop()  # Pop the next item\n",
+    "print(f\"{popped_item} popped from stack\")  # Output: 10 popped from stack\n",
+    "   \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -478,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,13 +685,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "30 pushed to stack\n",
       "30\n"
      ]
     }
@@ -518,10 +714,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 pushed to stack\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack():\n",
+    "     def __init__(self, capacity):\n",
+    "         self.capacity = capacity\n",
+    "         self.stack = [None] * capacity\n",
+    "         self.top = -1\n",
+    "\n",
+    "     def push(self, item):\n",
+    "         if self.isFull():\n",
+    "              print(\"Stack is full\")\n",
+    "              return\n",
+    "         self.top += 1\n",
+    "         self.stack[self.top] = item\n",
+    "         print(f\"{item} pushed to stack\")\n",
+    "     \n",
+    "     def isFull(self):\n",
+    "         return self.top == self.capacity - 1\n",
+    "     \n",
+    "     def isEmpty(self):\n",
+    "         return self.top == -1\n",
+    "     def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "          return None\n",
+    "        return self.stack[self.top]\n",
+    "     \n",
+    "# Sample Execution\n",
+    "array_stack = ArrayStack(10)\n",
+    "array_stack.push(30)  # Output: 30 pushed to stack\n",
+    "print(array_stack.peek())  # Output: 30\n",
+    "  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -547,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -584,10 +819,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 pushed to stack\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack():\n",
+    "     def __init__(self, capacity):\n",
+    "         self.capacity = capacity\n",
+    "         self.stack = [None] * capacity\n",
+    "         self.top = -1\n",
+    "\n",
+    "     def push(self, item):\n",
+    "         if self.isFull():\n",
+    "              print(\"Stack is full\")\n",
+    "              return\n",
+    "         self.top += 1\n",
+    "         self.stack[self.top] = item\n",
+    "         print(f\"{item} pushed to stack\")\n",
+    "     \n",
+    "     def isFull(self):\n",
+    "         return self.top == self.capacity - 1\n",
+    "     \n",
+    "     def isEmpty(self):\n",
+    "         return self.top == -1\n",
+    "\n",
+    "# Sample Execution\n",
+    "array_stack = ArrayStack(10)\n",
+    "array_stack.push(50)  # Output: 30 pushed to stack\n",
+    "print(array_stack.isEmpty())  # Output: False (since there are elements in the stack)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -613,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -650,10 +919,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 pushed to stack\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayStack():\n",
+    "     def __init__(self, capacity):\n",
+    "         self.capacity = capacity\n",
+    "         self.stack = [None] * capacity\n",
+    "         self.top = -1\n",
+    "\n",
+    "     def push(self, item):\n",
+    "         if self.isFull():\n",
+    "              print(\"Stack is full\")\n",
+    "              return\n",
+    "         self.top += 1\n",
+    "         self.stack[self.top] = item\n",
+    "         print(f\"{item} pushed to stack\")\n",
+    "     \n",
+    "     def isFull(self):\n",
+    "         return self.top == self.capacity - 1\n",
+    "     \n",
+    "     def isEmpty(self):\n",
+    "         return self.top == -1\n",
+    "\n",
+    "# Sample Execution\n",
+    "array_stack = ArrayStack(10)\n",
+    "array_stack.push(100)  # Output: 30 pushed to stack\n",
+    "print(array_stack.isFull())  # Output: False (if capacity has not been reached)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 pushed to stack\n",
+      "300 pushed to stack\n",
+      "400 pushed to stack\n",
+      "500 pushed to stack\n",
+      "600 pushed to stack\n",
+      "Stack is full\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_stack.push(200)\n",
+    "array_stack.push(300)\n",
+    "array_stack.push(400)\n",
+    "array_stack.push(500)\n",
+    "array_stack.push(600)\n",
+    "array_stack.push(600)\n",
+    "print(array_stack.isFull())  # Output: True (if capacity has been reached)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -686,7 +1018,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +1032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
